--- a/vueJS/basic/20_關於掛載_mount.html
+++ b/vueJS/basic/20_關於掛載_mount.html
@@ -24,7 +24,7 @@
 <body>
     <!-- HTML DOM template -->
     <div id="app">
-        <h2>{{message}}</h2>
+        <!-- <h2>{{message}}</h2> -->
     </div>
 
     <script>
@@ -57,7 +57,7 @@
         let vm = new Vue({
             el: '#app',
             data: {
-                message: 'Hello',
+                message: 'Hello', 
             },
 
             // template裡面放的都是原本的標籤
